# IT388-Group-Project

./: .clangd  3  CMakeLists.txt  README.md
resources/: data.txt
scripts/: compile_nvidia.sh  cpuJobScript.sb  gpuJobScript.sb  jobScript.sb  load_modules.sh  load_modules_cpu.sh  load_modules_gpu.sh
src/: GaussianBlur.cpp  GaussianBlur.hpp  cuda_main.cu  image.cpp  image.hpp  mpi_main.cpp  omp_main.cpp  omp_main_pixelExtract.cpp
